--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -3,14 +3,6 @@
     margin-bottom: 100px;
   }
   
-  .about-section {
-    padding: 20px;
-  }
-  
-  .about-section h2 {
-    font-size: 40px;
-  }
-  
   .info-section {
     background-color: rgb(240, 240, 240);
     padding: 20px;
@@ -18,7 +10,7 @@
   
   .demo-section {
     padding: 20px;
-    height: 400px;
+    height: 250px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -27,7 +19,7 @@
   .demo-section-card li {
     border: none;
     padding: 0;
-    font-size: 15px;
+    font-size: 20px;
   }
   
   .demo-section-card ul {
@@ -36,25 +28,8 @@
   }
   .demo-section-card {
     padding-bottom: 15px;
-    height: 300px;
-    width: 80%;
-  }
-  
-  .sign-up-section {
-    padding: 20px;
-  }
-  
-  .sign-up-button {
-    text-decoration: none;
-    background-color: #4169e1;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 10px;
-    box-shadow: 4px 4px 10px 0px rgba(179, 179, 179, 1);
-  }
-  
-  .sign-up-button:hover {
-    color: black;
+    height: 170px;
+    width: 50%;
   }
   
   h3 {
@@ -62,47 +37,39 @@
   }
   
   .card {
-    background-color: white;
+    background-color: #4169e1;
+    color: white;
     box-shadow: 8px 8px 10px 0px rgba(179, 179, 179, 1);
     border-radius: 10px;
     padding:3px 8px;
     margin-bottom: 30px;
   }
   
-  .icon {
-    margin-top: 25px;
-    height: 100px;
-    width: 100px;
-  }
 
-  .sprout-border {
+  .border {
     width: 100%;
     margin-bottom: 45px;
   }
   
-  /* MEDIA QUERIES  */
   
   @media only screen and (min-width: 500px) {
     
     .card-container {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+      align-items: center;
       flex-wrap: wrap;
       justify-content: space-evenly;
     }
   
     .card {
-      width: 600px;
+      width: 500px;
       margin-left: 10px;
       margin-right: 10px;
     }
-  
-    
-  
   }
   
   @media only screen and (min-width: 1350px) {
-    /* restrict main view size and center flex */
     .Landing-Page main {
       width: 1350px;
     }
@@ -117,9 +84,4 @@
       max-width: 600px;
     }
   
-    .about-section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
   }
