--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,27 +2,16 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: white;
-    border-bottom: 1px solid rgb(230, 230, 230);
-    height: 140px;
+    background-color: #4169e1;
+    border-bottom: 1px solid black;
+    height: 120px;
   }
   
-  .logo {
-    margin-top: 15px;
-    height: 60px;
-    width: 60px;
-  }
-  
-  .logo-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  
-  .logo-container h1{
+  h1 {
     margin-top: 10px;
-    font-size: 50px;
-    margin-bottom: 20px;
+    font-size: 45px;
+    margin-bottom: 10px;
+    color: white;
   }
   
   .link-container {
@@ -34,14 +23,21 @@
     margin: 0px 5px;
     font-size: 15px;
     border-radius: 5px;
-    box-shadow: 4px 4px 10px 0px rgba(179, 179, 179, 1);
+    box-shadow: 3px 3px 3px 0px black;
     padding: 5px 10px;
     color: black;
     background-color: white;
   }
   
   .link-container a:hover {
-    background-color: #4169e1;
+    background-color: black;
     color: white;
   }
   
+
+  @media only screen and (max-width: 320px) {
+    H1 {
+      font-size: 40px;
+    }
+    
+  }
