--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -1,3 +1,8 @@
+.sign-up-section {
+  padding: 0px;
+  margin-top: 150px;
+}
+
 .sign-up-section input {
     width: 100%;
     padding: 12px 20px;
@@ -26,15 +31,9 @@
   
   .error {
     font-size: 13px;
-    color: salmon;
+    color: red;
   }
-  
-  .sign-up-section span {
-    font-size: 13px;
-  }
-  
-  /* MEDIA QUERIES */
-  
+    
   @media only screen and (min-width: 500px) {
     .sign-up-form-container {
       display: flex;
